# oca-data-entry

./: Cargo.toml  README.md  release.toml
.github/workflows/: oca-data-entry.yml
src/: errors.rs  lib.rs  model.rs
src/extract/: from_bundle.rs  mod.rs
src/format/: csv.rs  mod.rs  xlsx.rs
