[package]
name = "oca-data-entry"
version = "0.2.3"
edition = "2021"
license = "EUPL-1.2"
description = "OCA data entry library - Generate data-entry templates (XLSX/ODS/CSV) from OCA bundles"

[dependencies]
oca-sdk-rs = { version = "2.0.0-rc.5" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
indexmap = "2.13.0"

[features]
# Writers are opt-in to keep the default build small.
default = ["writers-csv", "writers-xlsx"]
writers-csv = ["csv"]
writers-xlsx = ["umya-spreadsheet"]
writers-ods = []

[dependencies.csv]
version = "1.3"
optional = true

[dependencies.umya-spreadsheet]
version = "1.2.6"
optional = true

[package.metadata.release]
tag-name = "v{{version}}"
pre-release-commit-message="chore: release {{version}} version"
